--- a/Rapport/intro/analysis.tex
+++ b/Rapport/intro/analysis.tex
@@ -1,16 +1,16 @@
 \chapter{Analysis}
 \label{chap:Analysis}
-From the analysis chapter it should be possible to derive the requirements for the smart trash bin, Dumpsty. The initial user stories will help make the user requirements for the project. After the user requirements has been formed, the information from the user stories will be analysed in greater detail, depicting three different phases of the process: Throwing, detecting/tracking and catching. These three phases will be the inspiration for the system requirements. 
+From the analysis chapter it should be possible to derive the requirements for the smart trash bin, Dumpsty. The initial user story will help make the user requirements for the project. After the user requirements has been formed, the information from the user story will be analysed in greater detail, depicting three different phases of the process: Throwing, detecting/tracking and catching. These three phases will be the inspiration for the system requirements. 
 The analysis chapter will end up with a problem statement for the project. 
 
 \section{User story}
 \label{sec:User story}
-As mentioned before the user stories should help make the user requirements for the project, one user story have been made that showcase the use of Dumpsty.
+As mentioned before, the user story should help make the user requirements for the project, one user story have been made that showcase the use of Dumpsty.
 
-Benjamin is a software engineer who is tired of wasting his precious time on the job with walking back and forth from the trash bin in his office, and therefore wants to be able to throw his trash in the general direction of the bin instead. His aim when throwing the trash isn’t that of a trained basketball player, so he often has to pick up the trash after throwing it at the bin. \newline
-Benjamin wishes that the trash bin could move and collect the trash for him, so that he can throw his trash in the general direction of the bin, and the bin could then place itself in a way, that allows it to catch the trash before it lands on the floor. This would optimize the time Benjamin uses each day on collecting the trash he did not land in the trash bin.\newline
-If Benjamin throws at the bin from a designated side of a sensory camera, the robotic trash bin should identify the trash, move the bin to a place where it would be able to catch the trash, before it hits the ground.\newline
-If Benjamin throws outside a designated area of the robotic trash bin, it should not try to catch the trash, as it would compute that it is not able to get to the point of catching before the trash hits the ground.\newline
+Benjamin is a software engineer who is tired of wasting his precious time on the job with walking back and forth from the trash bin in his office, and therefore wants to be able to throw his trash in the general direction of the trash bin instead, without missing the trash bin. He often has to pick up the trash after throwing it at the trash bin. \newline
+Benjamin wishes that the trash bin could move and collect the trash for him, so that he can throw his trash in the general direction of the trash bin, and the trash bin could then place itself in a way, that allows it to catch the trash before it lands on the floor. This would optimize the time Benjamin uses each day on collecting the trash he did not land in the trash bin.\newline
+If Benjamin throws at the trash bin from a designated side of a sensory camera, the robotic trash bin should identify the trash, move the trash bin to a place where it would be able to catch the trash, before it hits the ground.\newline
+If Benjamin throws outside a designated area of the robotic trash bin, it should not try to catch the trash, as it would compute that it is not able to get to the point of impact before the trash hits the ground.\newline
 If Benjamin and another person from his office throws trash to the trash bin at the same time, it should prioritize the first identified trash.
 
 \section{User requirements}
@@ -18,52 +18,52 @@ If Benjamin and another person from his office throws trash to the trash bin at 
 The user requirements of the project have been conducted from the section \ref{sec:User story}. User requirements are simple requirements written in a natural language, which should help everyone get an understanding of the requirements for the project.
 
 \begin{itemize}
-\item The trash bin must be able to move itself to the colliding position of the trash within a certain time limit, with a certain precision.
-\item The trash bin should only consider trash thrown within a certain area of itself.
+	\item The trash bin must be able to move itself to the colliding position of the trash within a certain time limit, with a certain precision.
+	\item The trash bin should only consider trash thrown within a certain area of itself.
 \end{itemize}
 
 \section{System capabilities}
 \label{sec:System capabilities}
-This section will define the required capabilities of the system, which will include the functionality and hardware needed to fulfill the tasks of the embedded system. This is divided into three different categories, which are the subsections of the section. These categories, along with the user requirements, will define the system requirements for the project.
+This section will define the required capabilities of the system, which will include the functionality and hardware needed to fulfill the tasks of the embedded system. This is divided into three different categories, which are the subsections of the section. These categories, along with the user requirements, will define the system requirements for the project. 
 
 \textbf{Throwing}\newline
 When considering the process of throwing the trash, certain requirements must be met, which will be simplified for this project:
-The trash, from here on referred to as "an object", must be a round object of some sort, where in this project a table tennis ball will be used.  \newline
-The ball will be bounced on the ground, to give the sensor and robot more time to detect, track and calculate a point, at which the robot should move to, in order to catch the object.
+The trash, from here on referred to as an “object", must be a round object of some sort, in this project a table tennis ball will be used.  \newline
+The object will be bounced on the ground, to give the sensor and robot more time to detect, track and calculate a point, at which the robot should move to, in order to catch the object.
 
 \textbf{Detecting and tracking}\newline
 Detecting and tracking the object are two very essential tasks, but are considered as one. For detecting the object, a sensor should be able to recognize the specific object. \newline
 When the object has been detected, it will then be tracked by the same sensor. The sensor is going to track the direction the object is heading. This will be used to calculate the point of impact between the object and the ground.
 
 \textbf{Catching}\newline
-The catching phase is in which the robot calculates the impact point, and moves to that specific point. The robot gets information about the thrown object, in this case the impact point, from the sensor and uses the given information to calculate the impact point. What data the robot gets from the sensor and how the calculation is done, will be explained in later chapters. 
+The catching phase is when the robot calculates the impact point, and moves to that specific point. The robot gets information about the thrown object, in this case the impact point, from the sensor and uses the given information to calculate the impact point. What data the robot gets from the sensor and how the calculation is done, will be explained in later chapters. 
 
 \section{Hardware}
 \label{sec:Hardware} 
-The following sections will describe the hardware considerations for the project, the hardware’s capabilities and it’s limitations. The limitations and capabilities will be in consideration when reviewing the requirements later in this chapter, to specify how the hardware can meet the requirements.
+The following subsections will describe the hardware considerations for the project, the hardware’s capabilities and it’s limitations, to specify how the hardware can meet the requirements.
 
 \subsection{Sensors}
 \label{sec:Sensors}
-Sensors were used to measure the environment around the arduino and enable the arduino to understand that environment. The sensors utilized are described in individual sections. 
+Sensors were used to measure the environment around the arduino and enable the arduino to understand that environment. The sensors in consideration are described in individual sections. 
 
-Both the LEGO NXT Gyroscope and Accelerometer were used in the Appendix \ref{chap:Increment one}, but were chosen not to be used in the evaluation of the increment. Even though they were not used for the final product, they are lightly explained in this section.
+Both the LEGO NXT Gyroscope and Accelerometer were used in Appendix \ref{chap:Increment one}, but in the evaluation of the increment it was explained why these sensors are inadequate. Even though they were not used for the final product, they are cursorily explained in this section.
 
 \subsubsection{Microsoft Kinect}
 \label{sec:Microsoft Kinect}
-The Microsoft Kinect camera sensor enables the robot to gather information about thrown objects. The Kinect is a motion sensing device that is able to gather information about the location of an object, including the depth imaging, used to calculate the distance between the camera and the object, using a speckle pattern from an infrared camera. By using the depth information, the Kinect is able to locate the object in 3 dimensions.
+The Microsoft Kinect camera sensor enables the robot to gather information about thrown objects. The Kinect is a motion sensing device that is able to gather information about the location of an object, including the depth imaging, used to calculate the distance between the camera and the object, using a speckle pattern from an infrared camera. By using the depth information, the Kinect is able to locate the object in three dimensions.
 By spotting object multiple times in three dimensions, it is possible to calculate the path of the moving object, and thereby predict the impact point. This information can be sent to the robot, to enable the robot to move into position to possibly catch the object.
 
 \subsubsection{LEGO NXT Gyroscope}
 \label{sec:LEGO NXT Gyroscope}
-A gyroscope can be used to measure the heading of the robot. A gyroscope is constructed as a spinning disc that creates resistance when the robot is turned. This resistance is measured by the Lego NXT Gyro, and returned as a value representing the number of degrees per second of rotation. 
+A gyroscope can be used to measure the heading of the robot. A gyroscope is constructed as a spinning disc that creates resistance when the robot is turned. This resistance is measured by the Lego NXT Gyro, and returned as a value representing the number of degrees per second of rotation.
 
 \subsubsection{LEGO NXT Accelerometer}
 \label{sec:LEGO NXT Accelerometer}
-An Accelerometer is a device that measures the force affecting it. The Lego NXT Accelerometer measures this information, and sends it to the robot, to provide capability for the robot to calculate its acceleration. The gyroscope and the accelerometer can in concoction be used to position the robot.
+An Accelerometer is a device that measures the force affecting it. The Lego NXT Accelerometer measures this information, and sends it to the robot, to provide capability for the robot to calculate its acceleration. The gyroscope and the accelerometer can in combination be used to position the robot. 
 
 \subsection{LEGO NXT Servo motor}
 \label{sec:LEGO NXT Servo motor}
-For the robot to be able to move, it would need wheels powered by motors. In this project the LEGO NXT 9v Servo motor has been used, which at full power with no load can reach 170 RPM. The motor has a gear range of 1:48 split on the gear train in the motor. \citep{Servo} The motor includes an optical fork to provide data of motor rotations down to a \(1^{\circ}\) precision.
+For the robot to be able to move, it would need wheels powered by motors. In this project the LEGO NXT 9v Servo motor has been used, which at full power with no load can reach 170 RPM. The motor has a gear range of 1:48 split on the gear train in the motor. \citep{Servo} The motor includes an optical fork to provide data of motor rotations within \(1^{\circ}\) precision.
 
 For precision, and to benchmark the specific motors used in this project, a series of tests and measurements has been done on these motors:
 
@@ -74,13 +74,9 @@ The robot was programmed to drive forward for 10 seconds and was observed to tra
 The motor’s RPM is: (2230 \begin{math} \cdot \end{math} 175.929) \begin{math} \cdot \end{math} 6 = 86.966 RPM. 
 This calculation was calculated with fresh batteries, since this might affect the speed of the motors.
 
-%The travel time of a normal underhand throw have been measured, and the same for a throw where the object bounces on the ground.\newline
-%The travel time of a thrown object from when it leaves the hand to impact in the predefined area, is about 1.1second. This means that the robot will only be able to catch an object about 280mm away from its start position. \newline
-%If the object is bounced on the ground before it enters the predefined area, and must bounce atleast twice, the travel time of the object, from when the ball leaves the hand to impact in the predefined area, is 2 seconds. This will give the robot a range of 550mm away from its start position.  
-
 \subsection{Arduino}
 \label{sec:Arduino}
-The Arduino Mega 2560 was chosen for this project, as it has limited computational power, which will introduce interesting problems, as well as real-time constraints. \citep{a}
+The Arduino Mega 2560 was chosen for this project, as it has limited computational power, which will introduce interesting problems, as well as real-time constraints. 
 
 Arduino Mega 2560 Specifications:\newline
 Flash memory: 256KB (8 used by bootloader)\newline
@@ -88,21 +84,20 @@ SRAM: 8KB\newline
 EEPROM: 4KB\newline
 Clock Speed: 16 MHz\newline
 
-Especially the Clock speed is important, since the arduino mega 2560  will give 16000 clock cycles per millisecond to do the necessary tasks.
+Especially the clock speed is important, since the Arduino Mega 2560 will give 16000 clock cycles per millisecond to do the necessary tasks.
 
 \subsubsection{Arduino Wifi Shield}
 \label{sec: Arduino Wifi Shield}
-The WifiShield was acquired to enable wifi communication between the Kinect sensor and the Arduino Mega. The intention was to send the coordinates of the objects impact point to the Arduino, without limiting the movement of the robot. The wifi connection is able to transmit data at a rate of 9600 bits a minute. 
+The Wifi Shield was acquired to enable wifi communication between the Kinect sensor and the Arduino Mega. The intention was to send the coordinates of the objects impact point to the Arduino, without limiting the movement of the robot. The wifi connection is able to transmit data at a rate of 9600 bits a minute. 
 \citep{aws}
 
 \subsubsection{Arduino Motor Shield}
 \label{sec:Arduino Motor Shield}
 The Arduino Motor Shield is needed for the project to control the two DC motors independently. Without the motor shield the robot would only be able to move forward and backwards with both wheels at the same time. 
-The motor shield needs an external power source, as the Arduino cannot provide enough power. To solve this issue, a serial circuit of two 9V batteries is attached to the shield. \citep{ams}
+The motor shield needs an external power source, as the Arduino cannot provide enough power. To solve this issue, a serial circuit of two 9V batteries are attached to the shield. \citep{ams}
 
 \section{Problem statement}
 \label{sec:Problem statement}
 Based on the above analysis and the limitations of the project, a problem statement for the project has been constructed:
 
 \textbf{\textit{How can an embedded system control a trash bin to detect, track and catch a thrown object within a designated area?}}
-
