--- a/Rapport/kontekst/DesignSpecification.tex
+++ b/Rapport/kontekst/DesignSpecification.tex
@@ -1,35 +1,39 @@
 \chapter{Design specification}
 \label{chap:Design specification}
-This chapter will present the requirements and the way they were conducted for the project, the requirements will be examined at the end of the report to see if they have been fulfilled. The last section in the chapter will describe the delimitations made for the project.
+This chapter will present the requirements and the way they are conducted for the project, the requirements will be examined at the end of the report to see if they are fulfilled. The last section in the chapter will describe the delimitations made for the project.
+
 
 \section{System requirements}
 \label{sec:System requirements}
-The requirements for the project have been assembled through out several chapters. The Analysis chapter \ref{chap:Analysis}, is were the most of the requirements are conducted. The general requirements were extracted from the user story in section \ref{sec:User story}. Then in the Hardware section \ref{sec:Hardware}, the hardware would set some limitations for the project which lead to some more detailed requirements in the form of subrequirements.
+The requirements for the project is assembled throughout several chapters. The analysis chapter \ref{chap:Analysis}, is were the most of the requirements are conducted. The general requirements are extracted from the user story in section \ref{sec:User story}. In the Hardware section \ref{sec:Hardware}, the hardware sets limitations for the project which lead to more detailed requirements in the form of sub-requirements.
 
-Through out the work with the robot problems occurred and the requirements therefore changed. The changes done to the requirements though out the project, can be seen in the increments found in the Appendixes \ref{chap:Increment one}, \ref{chap:Increment two} and \ref{chap:Increment three}, where the requirements for the report will be the in the Evaluation section \ref{sec:i3Evaluation}, in appendix \ref{chap:Increment three}.
 
-The requirements for the project have been conducted through out the whole process and changes were made accordingly, to adapt to the hardware's limitations and the problems found. The requirements can be seen in the following list: 
+While working on the robot, problems has occurred and the requirements therefore change. The changes done to the requirements during the project, can be seen in the increments found in the appendixes \ref{chap:Increment one}, \ref{chap:Increment two} and \ref{chap:Increment three}, where the requirements for the project are in the evaluation section \ref{sec:i3Evaluation}, in appendix \ref{chap:Increment three}.
+
+
+The requirements for the project are conducted throughout the whole process and changes are made accordingly, to adapt to the hardware's limitations and the problems found. The requirements are listed below: 
+
 
 \begin{itemize}
-	\item The trash bin should catch the trash if the user throws it towards the trash bin and within a predefined area
+	\item The trash bin should catch the object if the user throws it towards the trash bin and within a predefined area
 	\begin{itemize}
 		\item {The robots predefined area should be calculated from the hardware limitations of the motors’ speed}
 	\end{itemize}
 	\item The robot should know where it is positioned
 	\begin{itemize}
-		\item{The robot should have a starting position, from where it should be able to calculate it's current position through calculations of the motory encoders}
+		\item {The robot should have a starting position, from where it should be able to calculate it's current position through calculations of the motor encoders}
 		\item {The robot's starting point should be placed outside its predefined area, such that it moves forward into the area}
 	\end{itemize}
-	\item The robot should be able to detect and track the thrown trash
+	\item The robot should be able to detect and track the thrown object
 	\begin{itemize}
-		\item {The thrown trash should be detected and tracked by a Microsoft Kinect}
+		\item {The thrown object should be detected and tracked by a Microsoft Kinect}
 		\item {The Kinect should send the coordinates of the impact point of the trash to the robot}
 	\end{itemize}
 	\item The robot should be able to calculate the impact point for the object
 	\begin{itemize}
-		\item {Trajectory prediction should be used to calculate impact point of the thrown trash}
+		\item {Trajectory prediction should be used to calculate impact point of the thrown object}
 	\end{itemize}
-	\item The robot should be able to move the trash bin, such that the thrown trash lands inside the bin
+	\item The robot should be able to move the trash bin, such that the thrown object lands inside the bin
 	\begin{itemize}
 		\item {The robot should be able to turn and drive forward}
 		\item{The robot should be able to recognize the coordinates sent from the Kinect}
@@ -38,7 +42,8 @@ The requirements for the project have been conducted through out the whole proce
 	\item {The system tasks should be able to be scheduled and verified}
 \end{itemize}
 
+
 \section{Delimitations}
 \label{sec:Delimitations}
-The group have made two delimitations for the project. First the group have decided that multiple object thrown should not be considered, so only one object should be thrown at a time. \newline
-It have also been decided that the robot should not drive backwards. The robot starts outside its predefined area and will only drive forward into that. This means that if the robot is already heading towards a point in its predefined area and the Kinect sends a new point, which is behind the robot, it will not be able to drive to the new point given by the Kinect. 
+It has been decided that for simplicity, only one object will be thrown at any given time. This delimits any multiple object tracking and prediction. \newline
+It has also been decided that the robot should not drive backwards. The robot starts outside its predefined area and will only drive forward into the area. This means that if the robot is already heading towards a point in its predefined area, and the Kinect sends a new point, which is behind the robot, it will not be able to drive to the new point given by the Kinect. 
