Rettelser til intoduktion, analyse og design spec

--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -140,4 +140,11 @@
 	publisher = {CRC Press 2012}
 }
 
+@manual{SmartTrashCan,
+	author = {Doug Aamoth},
+	address = {\url{http://techland.time.com/2013/02/15/finally-a-trash-can-on-wheels-that-automatically-catches-your-trash/}},
+	title = {Finally, a Trash Can on Wheels That Automatically Catches Your Trash},
+	year = {2013},
+	note = {Accessed: 16-12-2016}
+}
 
