--- a/Rapport/intro/indledning.tex
+++ b/Rapport/intro/indledning.tex
@@ -3,10 +3,17 @@
 An embedded system is a computer system which only has a few functions. It is embedded as a part of a whole device, which then also includes hardware and/or mechanical components. Embedded systems are everywhere in our everyday lives. The range for embedded systems could be all from saving lives with pacemakers to fun gadgets. \citep{es}
 
 An embedded system as a gadget, is a technological and small object or apparatus, which has a certain functionality. This functionality is limited to a certain niche. \newline
-In this project, the embedded system in consideration would be designed as a gadget, with the sole purpose of catching trash thrown at it. A trash bin that can catch trash would make the act of cleaning more fun and interactive, and the availability of each individual trash bin would be tremendously increased, because it will be able to move around.
+In this project, the embedded system in consideration will be designed as a gadget, with the sole purpose of catching trash thrown at it. A trash bin that can catch trash will make the act of cleaning more fun and interactive, and the availability of each individual trash bin will be tremendously increased, because it will be able to move around.
+
+A similar product has already been developed by Minoru Kurata, called "Smart Trash Can", the trash bin has won an Excellence Award at the Japan Media Arts Festival. One of the downsides of this product is that the catch-efficiency is very low, round 10-20\%, according to Minoru Kurata.  \citep{SmartTrashCan}
 
 For this gadget to be usable, it must be designed as a real-time system, as this system will have certain deadlines for each task to be executed in time. The trash bin must be able to identify an object coming towards it, make some computation to identify a point to catch it from, and then compute a path to catch the object. All this must be done before the object lands on the ground, which makes the use of real-time system design a part of this project. A real-time system is a software system which is subject to a real-time constraint, and the system must control and affect an environment, by receiving data and process these, within a certain time limit. 
 
 
+\section{Problem statement}
+\label{sec:Problem statement}
+Based on the introduction above, the problem statement for the project is as follows:
+
+\textbf{\textit{How can an embedded system control a trash bin to detect, track and catch a thrown object within a designated area?}}
 
 
