--- a/Rapport/kontekst/DesignSpecification.tex
+++ b/Rapport/kontekst/DesignSpecification.tex
@@ -11,7 +11,7 @@ The requirements for the project is assembled throughout several chapters. The a
 While working on the robot, problems has occurred and the requirements therefore change. The changes done to the requirements during the project, can be seen in the increments found in the appendixes \ref{chap:Increment one}, \ref{chap:Increment two} and \ref{chap:Increment three}, where the requirements for the project are in the evaluation section \ref{sec:i3Evaluation}, in appendix \ref{chap:Increment three}.
 
 
-The requirements for the project are conducted throughout the whole process and changes are made accordingly, to adapt to the hardware's limitations and the problems found. The requirements are listed below: 
+The requirements for the project are established throughout the whole process and changes are made accordingly, to adapt to the hardware's limitations and the problems found. The requirements are listed below: 
 
 
 \begin{itemize}
